# tuidu

./: .clang-format  .clang-tidy  .gitignore  AGENT.md  CMakeLists.txt  CMakePresets.json  README.md
.github/: release.json
.github/workflows/: build.yml  clang-format.yml  clang-tidy.yml  release.yml
cmake/: ClangTidy.cmake  Coverage.cmake  EnableCcache.cmake  EndoThirdParties.cmake  PedanticCompiler.cmake  Sanitizers.cmake  StaticLinking.cmake  Version.cmake  VersionParse.cmake
scripts/: get_contour_dirs.py
src/: CMakeLists.txt
src/coro/: .clang-tidy  Awaitable.hpp  CMakeLists.txt  Cancellation.hpp  Task.hpp  Task_test.cpp  WhenAll.hpp
src/platform/: CMakeLists.txt  DarwinProcessProvider_test.cpp  EnvironmentProvider.hpp  EnvironmentProvider_test.cpp  FileInfoProvider.hpp  FileInfoProvider_test.cpp  FileSystem.hpp  FileSystem_test.cpp  Generator.hpp  Generator_test.cpp  GlobMatch.cpp  GlobMatch.hpp  InstallPaths.cpp  InstallPaths.hpp  InterruptThrottle.hpp  InterruptThrottle_test.cpp  LinuxProcessProvider_test.cpp  MessageQueue.hpp  MessageQueue_test.cpp  NativeFileSystem.cpp  NativeFileSystem.hpp  PathUtils.cpp  PathUtils.hpp  Pipe.cpp  Pipe.hpp  Pipe_test.cpp  PlatformError.hpp  PlatformError_test.cpp  Process.cpp  Process.hpp  ProcessProvider.cpp  ProcessProvider.hpp  Process_test.cpp  ProjectFileTree.cpp  ProjectFileTree.hpp  ProjectFileTree_test.cpp  SignalHandler.cpp  SignalHandler.hpp  StringUtils.hpp  Types.hpp  (+6 more)
src/platform/darwin/: DarwinProcessProvider.cpp  DarwinProcessProvider.hpp
src/platform/linux/: LinuxFileInfoProvider.cpp  LinuxFileInfoProvider.hpp  LinuxProcessProvider.cpp  LinuxProcessProvider.hpp  LinuxWakeup.cpp  ProcStatusParser.hpp
src/platform/posix/: PosixEnvironmentProvider.cpp  PosixEnvironmentProvider.hpp  PosixWakeup.cpp
src/platform/testing/: InMemoryFileSystem.cpp  InMemoryFileSystem.hpp  MockFileInfoProvider.hpp  MockPipe.hpp  MockProcessManager.hpp  MockProcessProvider.hpp  TestEnvironmentProvider.hpp
src/platform/windows/: WindowsEnvironmentProvider.cpp  WindowsEnvironmentProvider.hpp  WindowsFileInfoProvider.cpp  WindowsFileInfoProvider.hpp  WindowsPipe.cpp  WindowsProcess.cpp  WindowsProcessProvider.cpp  WindowsProcessProvider.hpp  WindowsWakeup.cpp
src/testing/: EnvHelper.hpp  SuppressWindowsDialogs.hpp
src/tui/: Box.cpp  Box.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Cell.cpp  Cell.hpp  CommandPalettePopup.cpp  CommandPalettePopup.hpp  CommandPalettePopup_test.cpp  CommandRegistry.cpp  CommandRegistry.hpp  CommandRegistry_test.cpp  Completer_test.cpp  CompletionPopup.cpp  CompletionPopup.hpp  CompletionPopup_test.cpp  Component.cpp  Component.hpp  CursorShape.hpp  Dialog.cpp  Dialog.hpp  EditAction.hpp  Element.hpp  Error.hpp  FuzzyMatch_test.cpp  FuzzyPickerPopup.cpp  FuzzyPickerPopup.hpp  FuzzyPickerPopup_test.cpp  GenericSyntaxHighlighter.cpp  GenericSyntaxHighlighter.hpp  GenericSyntaxHighlighter_test.cpp  GhostTextHelper.hpp  HoverState.cpp  HoverState.hpp  ImageLoader.cpp  ImageLoader.hpp  ImageLoader_test.cpp  (+72 more)
src/tui/completer/: Completer.cpp  Completer.hpp  CompletionItem.hpp  CompletionProvider.hpp  FuzzyMatch.cpp  FuzzyMatch.hpp  SmartCaseMatch.cpp  SmartCaseMatch.hpp
src/tui/platform/: PosixIO.hpp  Terminal.cpp  TerminalInput.cpp  TerminalInputWin32.cpp  TerminalOutput.cpp  TerminalOutputWin32.cpp  TerminalShared.cpp  TerminalWin32.cpp  Win32Utf.hpp
src/tui/runtime/: EventSource.hpp  Modal.hpp  ModalComponent.hpp  Modal_test.cpp  TerminalEventSource.hpp  TuiRuntime.cpp  TuiRuntime.hpp  TuiRuntime_test.cpp
src/tui/runtime/platform/: TerminalEventSourcePosix.cpp  TerminalEventSourceWin32.cpp
src/tui/runtime/testing/: MockEventSource.hpp
src/tuidu/: Action.hpp  App.cpp  App.hpp  App_test.cpp  CMakeLists.txt  ChordRecognizer.cpp  ChordRecognizer.hpp  ChordRecognizer_test.cpp  ChordSequence.hpp  Cli.cpp  Cli.hpp  Cli_test.cpp  ColorRules.cpp  ColorRules.hpp  ColorRules_test.cpp  Columns.cpp  Columns.hpp  Columns_test.cpp  Config.cpp  Config.hpp  ConfigPaths_test.cpp  Config_test.cpp  DeleteProgress.hpp  DeleteProgressDialog.cpp  DeleteProgressDialog.hpp  DeleteProgressDialog_test.cpp  DeleteWorker.cpp  DeleteWorker.hpp  DeleteWorker_test.cpp  DiskUsageModel.cpp  DiskUsageModel.hpp  DiskUsageModel_test.cpp  HelpOverlay.cpp  HelpOverlay.hpp  HelpOverlay_test.cpp  Keymap.cpp  Keymap.hpp  Keymap_test.cpp  Node.hpp  ScanProgress.hpp  (+24 more)
